[package]
name = "lairon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

name = "lairon"

crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
# pyo3 = { version = "0.23.3", features = ["abi3-py38"] }

ndarray = "0.16.1"
numpy = "0.23"
